Update verbiage based on feedback. Fix intro button layout issue

--- a/src/styles/calculator.scss
+++ b/src/styles/calculator.scss
@@ -176,7 +176,7 @@ div#intro .footer { text-align: center; }
   display: none;
 }
 
-.footer button:not(:first-child) { margin-left: 20px; }
+//.footer button:not(:first-child) { margin-left: 20px; }
 .impact_panel { border-top: 1px solid #eee; }
 div.header, div.basic_info_data { width: 100%; }
 div.no_print { display: block; }
